--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,9 @@
 /* .................................................................................................................................... */
 /* .................................................................................................................................... */
 /* ОБНУЛЕННЯ*/ 
-
+html, body {
+    touch-action: manipulation;
+  }
 * { padding: 0;    margin: 0; border: 0;}
 * {    -webkit-tap-highlight-color: transparent;} 
 *:focus {  outline: none;-webkit-tap-highlight-color: transparent;  }
