--- a/css/styles.css
+++ b/css/styles.css
@@ -366,8 +366,8 @@ width: 100%;
 .info__wrapper-img {
     overflow: hidden;
 
-    max-width: 170px;
-    max-height: 170px;
+    width: 170px;
+    height: 170px;
 
     background-color: rgba(230, 255, 238, 1);
     border: 10px solid #f2f2f2;
@@ -389,7 +389,7 @@ width: 100%;
 .info__img {
     max-width: 100%;
     height: 100%;
-/*     object-fit: cover; */
+    /* object-fit: cover; */
 }
 
 
@@ -452,8 +452,8 @@ left: 2%;
     
     .info__wrapper-img {
 
-        max-width: 160px;
-        max-height: 160px;
+        width: 160px;
+        height: 160px;
 
         border: 8px solid #f2f2f2;
         border-bottom: 28px solid #f2f2f2;
@@ -489,8 +489,8 @@ left: 2%;
         
         .info__wrapper-img {
     
-            max-width: 140px;
-            max-height: 140px;
+            width: 140px;
+            height: 140px;
     
             border: 6px solid #f2f2f2;
             border-bottom: 26px solid #f2f2f2;
@@ -525,8 +525,8 @@ left: 2%;
         
         .info__wrapper-img {
     
-            max-width: 130px;
-            max-height: 130px;
+        width: 130px;
+        height: 130px;
     
             border: 6px solid #f2f2f2;
             border-bottom: 26px solid #f2f2f2;
@@ -565,8 +565,8 @@ left: 2%;
         
         .info__wrapper-img {
     
-            max-width: 120px;
-            max-height: 120px;
+            width: 120px;
+            height: 120px;
     
             border: 6px solid #f2f2f2;
             border-bottom: 24px solid #f2f2f2;
@@ -644,8 +644,8 @@ left: 2%;
     overflow: hidden;
     top: -80%;
     right: 2%;
-    max-width: 200px;
-    max-height: 200px;
+    width: 200px;
+    height: 200px;
 
     background-color: rgba(230, 255, 238, 1);
     border: 10px solid #f2f2f2;
@@ -683,8 +683,8 @@ left: 2%;
     
     .user__wrapper {
     
-        max-width: 180px;
-        max-height: 180px;
+        width: 180px;
+        height: 180px;
  
         border: 8px solid #f2f2f2;
         border-bottom: 28px solid #f2f2f2;
@@ -707,8 +707,8 @@ left: 2%;
     @media (max-width: 1000px) { 
         .user__wrapper {
     
-            max-width: 150px;
-            max-height: 150px;
+            width: 150px;
+            height: 150px;
      
             border: 6px solid #f2f2f2;
             border-bottom: 26px solid #f2f2f2;
@@ -728,8 +728,8 @@ left: 2%;
     @media (max-width: 800px) { 
         .user__wrapper {
     
-            max-width: 140px;
-            max-height: 140px;
+            width: 140px;
+            height: 140px;
      
             border: 6px solid #f2f2f2;
             border-bottom: 26px solid #f2f2f2;
@@ -764,8 +764,8 @@ left: 2%;
         }
         .user__wrapper {
     
-            max-width: 140px;
-            max-height: 140px;
+            width: 140px;
+            height: 140px;
      
             border: 6px solid #f2f2f2;
             border-bottom: 26px solid #f2f2f2;
