--- a/css/styles.css
+++ b/css/styles.css
@@ -366,8 +366,8 @@ width: 100%;
 .info__wrapper-img {
     overflow: hidden;
 
-    width: 170px;
-    height: 170px;
+    width: 200px;
+    height: 200px;
 
     background-color: rgba(230, 255, 238, 1);
     border: 10px solid #f2f2f2;
@@ -387,9 +387,9 @@ width: 100%;
 
 }
 .info__img {
-    width: 100%;
+    max-width: 100%;
     height: 100%;
-    /* object-fit: cover; */
+    object-fit: cover;
 }
 
 
@@ -452,8 +452,8 @@ left: 2%;
     
     .info__wrapper-img {
 
-        width: 160px;
-        height: 160px;
+        width: 190px;
+        height: 190px;
 
         border: 8px solid #f2f2f2;
         border-bottom: 28px solid #f2f2f2;
@@ -489,8 +489,8 @@ left: 2%;
         
         .info__wrapper-img {
     
-            width: 140px;
-            height: 140px;
+            width: 180px;
+            height: 180px;
     
             border: 6px solid #f2f2f2;
             border-bottom: 26px solid #f2f2f2;
@@ -525,8 +525,8 @@ left: 2%;
         
         .info__wrapper-img {
     
-        width: 130px;
-        height: 130px;
+        width: 170px;
+        height: 170px;
     
             border: 6px solid #f2f2f2;
             border-bottom: 26px solid #f2f2f2;
@@ -545,7 +545,7 @@ left: 2%;
 
         .block__swipper{
             padding: 0px 40px;
-            margin-bottom: 60px;
+            margin-bottom: 70px;
         }
         .swiper-slide {
      
@@ -556,22 +556,22 @@ left: 2%;
     
           .swiper__title {
         
-            font-size: 18px;
+            font-size: 14px;
        text-align: center;
-            margin-bottom: 16px;
+            margin-bottom: 13px;
         }
     
     
         
         .info__wrapper-img {
     
-            width: 120px;
-            height: 120px;
+            width: 160px;
+            height: 160px;
     
             border: 6px solid #f2f2f2;
             border-bottom: 24px solid #f2f2f2;
             margin-right: 0px;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
         }
         
         .progress-index{
@@ -660,7 +660,11 @@ left: 2%;
     /* Нахил праворуч */
     transform: rotate(5deg); /* Нахил праворуч на 5 градусів */
 }
-
+.user__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
 
 .info__list {
@@ -683,8 +687,8 @@ left: 2%;
     
     .user__wrapper {
     
-        width: 180px;
-        height: 180px;
+        width: 190px;
+        height: 190px;
  
         border: 8px solid #f2f2f2;
         border-bottom: 28px solid #f2f2f2;
@@ -707,8 +711,8 @@ left: 2%;
     @media (max-width: 1000px) { 
         .user__wrapper {
     
-            width: 150px;
-            height: 150px;
+            width: 170px;
+            height: 170px;
      
             border: 6px solid #f2f2f2;
             border-bottom: 26px solid #f2f2f2;
@@ -728,8 +732,8 @@ left: 2%;
     @media (max-width: 800px) { 
         .user__wrapper {
     
-            width: 140px;
-            height: 140px;
+            width: 160px;
+            height: 160px;
      
             border: 6px solid #f2f2f2;
             border-bottom: 26px solid #f2f2f2;
@@ -764,16 +768,16 @@ left: 2%;
         }
         .user__wrapper {
     
-            width: 140px;
-            height: 140px;
+            width: 160px;
+            height: 160px;
      
             border: 6px solid #f2f2f2;
             border-bottom: 26px solid #f2f2f2;
            
-            top: 50%;
-            right: 0%;
+            top: 40%;
+            right: -3%;
           
-            transform: rotate(3deg); 
+            transform: rotate(-3deg); 
         }
         
     
