--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,11 @@
 /* .................................................................................................................................... */
 /* .................................................................................................................................... */
 /* ОБНУЛЕННЯ*/ 
+a[href^="tel"] {
+    color: inherit;
+    text-decoration: none;
+}
+
 html, body {
     touch-action: manipulation;
   }
