--- a/css/styles.css
+++ b/css/styles.css
@@ -74,23 +74,251 @@ body::-webkit-scrollbar-thumb {
 /* .................................................................................................................................... */
 /* .................................................................................................................................... */
 /* .................................................................................................................................... */
-/* ВЕРХ СТОРІНКИ*/ 
-
-header{
-    min-height: 70px;
-    background-color: rgba(230, 255, 238, 1);
-    margin-bottom: 30px;
-}
-nav{
-    width: 100%;
-    min-height: 70px;
+/* ВЕРХ СТОРІНКИ МЕНЮ*/ 
+header {
     position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 50;
+}
+
+header:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 3;
+    
+
     background-color: rgba(230, 255, 238, 0.5);
     backdrop-filter: blur(4px);  
     -webkit-backdrop-filter: blur(4px); 
     box-shadow: inset 3px 0 5px rgba(0, 0, 0, 0.1);
-    z-index: 10;
 }
+
+.menu {
+    max-width: 90%;
+    margin: 0px auto;
+    padding: 0px 10px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    height: 60px;
+    align-items: center;
+}
+
+
+
+.menu__logolink:hover .menu__image {
+    transform: scale(1.01);
+}
+
+
+.menu__logolink {
+    flex: 0 0 60px;
+    position: relative;
+    z-index: 5;
+    display: flex;
+    align-items:center;
+}
+.menu__logolink p{
+  margin-left: 10px;
+  text-decoration: none;
+  text-wrap: nowrap;
+  font-size: 22px;
+    font-weight: 700;
+    color: rgb(85, 165, 111);
+
+}
+
+
+.menu__image {
+    width: 100%;
+    max-width: 60px;
+    height: auto;
+    transition: transform 0.3s ease;
+}
+
+
+.menu__burger {
+    display: none;
+}
+
+.menu__list {
+    display: flex;
+    position: relative;
+    z-index: 4;
+}
+
+.menu__list li {
+    margin: 0px 0px 0px 30px;
+}
+
+.menu__link {
+    color:  rgb(85, 165, 111);
+    font-weight: 700;
+    font-size: 18px;
+	position: relative;
+}
+
+
+.menu__link::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background-color:  rgb(85, 165, 111);
+    transform: scaleX(0); 
+    transform-origin: center; 
+    transition: transform 0.3s ease-in-out; 
+}
+
+.menu__link:hover::after {
+    transform: scaleX(1); 
+}
+
+
+
+@media (max-width: 1100px) {
+    body.lock {
+        overflow: hidden;
+    }
+
+    .menu {
+        height: 50px;
+    }
+
+    .menu__logolink {
+        flex: 0 0 45px;
+		margin-left: 10px;
+    }
+    .menu__image {
+        width: 100%;
+        max-width: 45px;
+        height: auto;
+        transition: transform 0.3s ease;
+    }
+
+    .menu__logolink p{
+      margin-left: 10px;
+      text-decoration: none;
+      text-wrap: nowrap;
+      font-size: 18px;
+        font-weight: 700;
+        color: rgb(85, 165, 111);
+    
+    }
+
+    .menu__burger {
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 20px;
+        z-index: 5;
+        cursor: pointer; 
+    }
+
+    
+    .menu__burger span {
+        position: absolute;
+        background-color:  rgb(85, 165, 111);
+        left: 0;
+        width: 100%;
+        height: 3px;
+        top: 9px; 
+        transition: all 0.3s ease 0s;
+    }
+
+
+    .menu__burger:before {
+        content: '';
+        background-color:  rgb(85, 165, 111);
+        position: absolute;
+        width: 100%;
+        height: 3px;
+        top: 1px; 
+        left: 0;
+        transition: all 0.3s ease 0s;
+    }
+
+   
+    .menu__burger:after {
+        content: '';
+        background-color:  rgb(85, 165, 111);
+        position: absolute;
+        width: 100%;
+        height: 3px;
+        bottom: 1px;
+        left: 0;
+        transition: all 0.3s ease 0s;
+    }
+
+    .menu__burger.active span {
+        transform: scale(0);
+    }
+
+    .menu__burger.active:before {
+        transform: rotate(45deg);
+        top: 50%;
+        transform: translateY(-50%) rotate(45deg);
+    }
+
+    .menu__burger.active:after {
+        transform: rotate(-45deg);
+        bottom: 50%;
+        transform: translateY(50%) rotate(-45deg);
+    }
+
+    .menu__block {
+        position: fixed;
+        top: -100%;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        
+    background-color: rgba(230, 255, 238, 0.5);
+    backdrop-filter: blur(4px);  
+    -webkit-backdrop-filter: blur(4px); 
+    box-shadow: inset 3px 0 5px rgba(0, 0, 0, 0.1);
+        overflow: auto;
+        padding: 70px 10px 20px 10px;
+        transition: all 0.3s ease 0s;
+    }
+
+    .menu__block.active {
+        top: 0;
+    }
+
+    .menu__list {
+        display: block;
+    }
+
+    .menu__list li {
+        margin: 0px 0px 20px 0px;
+    }
+
+    .menu__link {
+        font-size: 18px;
+        padding: 10px 5px;
+    }
+}
+
+@media (max-width: 660px) {
+    .menu__logolink p{
+        margin-left: 6px;
+       
+        font-size: 12px;
+         
+      
+      }
+}
+
+
 /* .................................................................................................................................... */
 /* .................................................................................................................................... */
 /* .................................................................................................................................... */
@@ -107,6 +335,8 @@ nav{
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+
+    margin-top: 90px;
 }
 /* .................................................................................................................................... */
 /* .................................................................................................................................... */
@@ -349,7 +579,7 @@ width: 100%;
 
   .swiper__title {
 
-    font-size: 28px;
+    font-size: 24px;
     font-weight: 800;
     color: rgba(85, 165, 111, 1);
     margin-bottom: 20px;
@@ -419,7 +649,7 @@ width: 100%;
 
 .progress-index{
 position: absolute;
-font-size: 22px;
+font-size: 18px;
 font-weight: 800;
 color: rgba(85, 165, 111, 1);
 
@@ -769,7 +999,7 @@ left: 2%;
             padding: 14px; 
             
 
-            margin-top: 30px;
+          
           
         }
         .user__wrapper {
@@ -818,22 +1048,27 @@ max-height: 54px;
     cursor: pointer;
     transition: all 0.1s ease-in-out;
     position: relative;
-    box-shadow: 0 6px 0 rgba(125, 220, 141, 0.3), 0 6px 10px rgba(0, 0, 0, 0.2);
+    background-color:rgba(241, 255, 246, 0.6);
+    cursor: pointer;
+            transition: transform 0.1s ease, box-shadow 0.1s ease;
+            user-select: none;
+            box-shadow: 0 4px 0 rgba(125, 220, 141, 0.6);
+            position: relative;
 }
 
 .panel__button:first-child {
     margin-bottom: 0px; margin-right: 20px;
 }
 
-.panel__button:hover {
-   
-    transform: translateY(-2px);
-    box-shadow: 0 7px 0 rgba(125, 220, 141, 0.3), 0 9px 14px rgba(0, 0, 0, 0.25);
-}
+
+    .panel__button:hover {
+        background-color: rgba(241, 255, 246, 0.6);
+    }
+
 
 .panel__button:active {
-    transform: translateY(2px);
-    box-shadow: 0 1px 0 rgba(125, 220, 141, 0.3), 0 3px 6px rgba(0, 0, 0, 0.2);
+    transform: translateY(4px);
+    box-shadow: 0 0px 0 rgba(125, 220, 141, 0.6);
 }
 
 
@@ -875,7 +1110,7 @@ max-height: 54px;
     @media (max-width: 660px) { 
         .panel__button:first-child {
             margin-bottom: 20px; margin-right: 0px;
-            width: 50%;
+            width: 45%;
         }
     }
 
@@ -893,17 +1128,17 @@ max-height: 54px;
 }
 
 .archive__wrapper {
+    
     display: flex;
     width: 100%;
     overflow-x: scroll;
     overflow-y: hidden;
-    background: url(../asset/bg/beck9.svg);
-    background-size: 150px 150px;
-    background-color: rgba(212, 253, 229, 0.8);
-    background-blend-mode: multiply; 
+  
+    background-color: rgba(207, 239, 217, 0.4);
     border: 5px solid rgba(125, 220, 141, 0.3);
     border-radius: 20px;
-   
+    backdrop-filter: blur(4px);  
+    -webkit-backdrop-filter: blur(4px); 
     box-shadow: inset 3px 0 5px rgba(0, 0, 0, 0.1);
   
     gap: 20px; 
@@ -920,22 +1155,26 @@ max-height: 54px;
     
     min-width: 180px;
     height: 180px;
-    background-color: rgba(85, 165, 111, 0.4);
+    background-color: rgba(207, 239, 217, 0.4);
     border: 5px solid rgba(125, 220, 141, 0.3);
-    border-radius: 20px; 
+    border-radius: 20px;
+    backdrop-filter: blur(4px);  
+    -webkit-backdrop-filter: blur(4px); 
+    box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.1);
+   padding-bottom: 6px; 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items:center;
+
+
 }
 
 .archive__title {
     font-size: 24px;
-    font-weight: 800;
+    font-weight: 1000;
     color: rgba(85, 165, 111, 1);
-    background-color: rgba(207, 239, 217, 0.9);
    
-    border-radius: 20px;
     padding: 10px;
     width: 100%;
 
@@ -948,8 +1187,10 @@ max-height: 54px;
 .archive__grade {
     font-size: 20px;
     font-weight: 800;
-    color: rgb(235, 254, 241);
+    color: rgba(85, 165, 111, 1);
 }
+
+
 
 
 @media (max-width: 1350px) { 
@@ -1018,10 +1259,12 @@ max-height: 54px;
             font-size: 16px;
          
         }
+    
         .archive__button{
+           
             font-size: 14px;
-
         }
+        
     }
     @media (max-width: 660px) { 
  .block__info100{
@@ -1061,6 +1304,5 @@ footer{
     background-blend-mode: multiply; 
     
     border-top: 5px solid rgba(168, 109, 131, 0.1);
-
+  
 }
-
