--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,9 @@ body::-webkit-scrollbar {
 body::-webkit-scrollbar-thumb {
     background-color: transparent;/* Колір смуги прокрутки */
 }
-
+.lock {
+    overflow: hidden;
+}
 .wrapper {
     width: 100%;
     min-height: 100%;
@@ -71,6 +73,108 @@ body::-webkit-scrollbar-thumb {
 ::selection {
     background-color:  rgba(0, 30, 3, 0.8);
 }
+/* .. */
+    /* Стилі для затемненого фону */
+    .popup-overlay {
+        position: fixed;
+  top: 0;
+  left: 0;
+
+  transform: scale(0);
+    width: 100%;
+    height: 100%;
+    z-index: 40;
+    
+    backdrop-filter: blur(4px);  
+    -webkit-backdrop-filter: blur(4px); 
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    }
+    
+    .popup {
+        position: relative;
+        padding: 20px; 
+    background-color: rgba(207, 239, 217, 0.6);
+    border: 5px solid rgba(125, 220, 141, 0.3);
+    border-radius: 20px;
+    backdrop-filter: blur(4px);  
+    -webkit-backdrop-filter: blur(4px); 
+    box-shadow: inset 3px 0 5px rgba(0, 0, 0, 0.1);
+  
+    width: 60%;
+    height: 70%;
+  
+    overflow: auto;
+   display: flex;
+   flex-direction: column;
+
+
+       
+    }
+
+    .popup::-webkit-scrollbar {
+        width: 0em; /* Товщина смуги прокрутки */
+    }
+    
+    .popup::-webkit-scrollbar-thumb {
+        background-color: transparent;/* Колір смуги прокрутки */
+    }
+
+    
+
+    .closePopup{
+        position: absolute;
+        top: 0px;
+        right: 10px;
+        color: rgba(125, 220, 141, 1);
+        font-size: 34px;
+        background-color:transparent;
+        cursor: pointer;
+    }
+
+    
+@media (max-width: 800px) { 
+    .popup {
+
+    width: 80%;
+    height: 70%;
+
+    }
+    
+
+    .closePopup{
+    
+        font-size: 28px;
+        font-weight: 800;
+
+    }
+}
+
+
+
+
+
+@media (max-width: 660px) { 
+    .popup {
+
+        width: 90%;
+        height: 60%;
+    
+        }
+        
+    
+        .closePopup{
+        
+            font-size: 24px;
+            font-weight: 800;
+    
+        }
+}
+
+    
 /* .................................................................................................................................... */
 /* .................................................................................................................................... */
 /* .................................................................................................................................... */
@@ -93,7 +197,7 @@ header:before {
     z-index: 3;
     
 
-    background-color: rgba(230, 255, 238, 0.5);
+    background-color: rgba(230, 255, 238, 0.7);
     backdrop-filter: blur(4px);  
     -webkit-backdrop-filter: blur(4px); 
     box-shadow: inset 3px 0 5px rgba(0, 0, 0, 0.1);
@@ -151,7 +255,11 @@ header:before {
     display: flex;
     position: relative;
     z-index: 4;
+
+    /* overflow: auto; */
 }
+
+
 
 .menu__list li {
     margin: 0px 0px 0px 30px;
@@ -163,25 +271,6 @@ header:before {
     font-size: 18px;
 	position: relative;
 }
-
-
-.menu__link::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 2px;
-    background-color:  rgb(85, 165, 111);
-    transform: scaleX(0); 
-    transform-origin: center; 
-    transition: transform 0.3s ease-in-out; 
-}
-
-.menu__link:hover::after {
-    transform: scaleX(1); 
-}
-
 
 
 @media (max-width: 1100px) {
@@ -296,6 +385,13 @@ header:before {
         padding: 70px 10px 20px 10px;
         transition: all 0.3s ease 0s;
     }
+    .menu__block::-webkit-scrollbar {
+        width: 0em; /* Товщина смуги прокрутки */
+    }
+    
+    .menu__block::-webkit-scrollbar-thumb {
+        background-color: transparent;/* Колір смуги прокрутки */
+    }
 
     .menu__block.active {
         top: 0;
@@ -304,6 +400,7 @@ header:before {
     .menu__list {
         display: block;
     }
+
 
     .menu__list li {
         margin: 0px 0px 20px 0px;
@@ -316,15 +413,7 @@ header:before {
 }
 
 @media (max-width: 660px) {
-   
-    .menu {
-    max-width: 98%;
-    
-    padding: 0px 6px;
-
-}
-
-     .menu__logolink p{
+    .menu__logolink p{
         margin-left: 6px;
        
         font-size: 12px;
@@ -353,6 +442,8 @@ header:before {
 
     margin-top: 90px;
 }
+
+
 /* .................................................................................................................................... */
 /* .................................................................................................................................... */
 /* .................................................................................................................................... */
@@ -681,6 +772,7 @@ left: 2%;
 }
 .swiper__button{
     width: 50%;
+   
 }
 
 @media (max-width: 1350px) { 
@@ -845,7 +937,8 @@ left: 2%;
               
             }
             .swiper__button{
-                width: 100%;
+                width: 50%;
+              
             }
 
             .progress-bar {
@@ -867,7 +960,7 @@ left: 2%;
                 display: flex;
                 justify-content: center;
                 align-items: center;
-            
+                margin-bottom: 15px; margin-right: 0px;
             }
       
             
@@ -1060,25 +1153,21 @@ max-height: 54px;
     color: rgba(85, 165, 111, 1);
     border: 5px solid rgba(125, 220, 141, 0.3);
     border-radius: 20px;
-    cursor: pointer;
+
     transition: all 0.1s ease-in-out;
     position: relative;
-    background-color:rgba(241, 255, 246, 0.6);
+    background-color:rgba(241, 255, 246, 0.8);
     cursor: pointer;
-            transition: transform 0.1s ease, box-shadow 0.1s ease;
+      
             user-select: none;
             box-shadow: 0 4px 0 rgba(125, 220, 141, 0.6);
-            position: relative;
+        
 }
 
-.panel__button:first-child {
+.panel .panel__button:first-child {
     margin-bottom: 0px; margin-right: 20px;
 }
 
-
-    .panel__button:hover {
-        background-color: rgba(241, 255, 246, 0.6);
-    }
 
 
 .panel__button:active {
@@ -1099,7 +1188,7 @@ max-height: 54px;
     
     
     }
-    .panel__button:first-child {
+    .panel .panel__button:first-child {
         margin-bottom: 20px; margin-right: 0px;
     }
     .panel__button {
@@ -1123,7 +1212,7 @@ max-height: 54px;
         }
     }
     @media (max-width: 660px) { 
-        .panel__button:first-child {
+        .panel .panel__button:first-child {
             margin-bottom: 20px; margin-right: 0px;
             width: 45%;
         }
@@ -1148,7 +1237,7 @@ max-height: 54px;
     width: 100%;
     overflow-x: scroll;
     overflow-y: hidden;
-  
+ 
     background-color: rgba(207, 239, 217, 0.4);
     border: 5px solid rgba(125, 220, 141, 0.3);
     border-radius: 20px;
@@ -1157,7 +1246,7 @@ max-height: 54px;
     box-shadow: inset 3px 0 5px rgba(0, 0, 0, 0.1);
   
     gap: 20px; 
-    padding: 10px; 
+    padding: 10px 20px;
    
 }
 
@@ -1168,44 +1257,71 @@ max-height: 54px;
 
 .archive__block {
     
-    min-width: 180px;
-    height: 180px;
-    background-color: rgba(207, 239, 217, 0.4);
-    border: 5px solid rgba(125, 220, 141, 0.3);
+  
     border-radius: 20px;
-    backdrop-filter: blur(4px);  
-    -webkit-backdrop-filter: blur(4px); 
-    box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.1);
    padding-bottom: 6px; 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items:center;
+    transition: all 0.2s ease-in-out;
 
 
 }
 
+.archive__block:hover {
+  
+
+    transform: translateY(6px);
+
+}
+
+
+.archive__block:active {
+    transform: translateY(0px);
+}
+
+
+
+
 .archive__title {
     font-size: 24px;
-    font-weight: 1000;
+    font-weight: 800;
     color: rgba(85, 165, 111, 1);
    
     padding: 10px;
     width: 100%;
 
     display: flex;
-    
     justify-content: center;
     align-items:center;
+
 
 }
 .archive__grade {
     font-size: 20px;
     font-weight: 800;
     color: rgba(85, 165, 111, 1);
+padding-top: 10px;
+
+    
+    border: 5px solid rgba(125, 220, 141, 0.3);
+    border-top: none;
+    border-bottom: none;
+  border-radius: 20px;
+    backdrop-filter: blur(4px);  
+    -webkit-backdrop-filter: blur(4px); 
+    box-shadow: inset 1px 0px 1px rgba(0, 0, 0, 0.1);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
 }
 
-
+.archive__button{
+    margin-top: 10px;
+}
 
 
 @media (max-width: 1350px) { 
@@ -1223,13 +1339,7 @@ max-height: 54px;
        
     }
 
-    .archive__block {
-        
-        min-width: 160px;
-        height: 160px;
-     
-    }
-    
+
     .archive__title {
         font-size: 20px;
    
@@ -1257,13 +1367,7 @@ max-height: 54px;
            
         }
       
-    
-        .archive__block {
-            
-            min-width: 130px;
-            height: 130px;
-         
-        }
+
         
         .archive__title {
             font-size: 18px;
