--- a/css/styles.css
+++ b/css/styles.css
@@ -104,8 +104,9 @@ body::-webkit-scrollbar-thumb {
     -webkit-backdrop-filter: blur(8px); 
     box-shadow: inset 3px 0 5px rgba(0, 0, 0, 0.1);
   
-    width: 60%;
-    height: 80%;
+    max-width: 60%;
+    height: auto;
+    max-height: 80%;
   
  
    display: flex;
@@ -132,7 +133,9 @@ body::-webkit-scrollbar-thumb {
     width: 100%;
         height: 100%;
         overflow: auto;
+         /* display: flex; */
         
+       
     }
 
     .popup__wraper::-webkit-scrollbar {
@@ -174,8 +177,8 @@ body::-webkit-scrollbar-thumb {
 @media (max-width: 800px) { 
     .popup {
 
-    width: 80%;
-    height: 80%;
+        max-width: 80%;
+   
 padding: 10px;
     }
     .popup__title{
@@ -200,8 +203,8 @@ padding: 10px;
 @media (max-width: 660px) { 
     .popup {
 
-        width: 90%;
-        height: 80%;
+        max-width: 90%;
+       
         padding: 8px;
     
         }
@@ -1511,7 +1514,7 @@ footer{
     background-color: rgba(233, 254, 240, 0.8);
     color: rgba(85, 165, 111, 1);
 }
-@media (max-width: 1000px) { 
+@media (max-width: 1200px) { 
 
 
     
@@ -1545,4 +1548,53 @@ footer{
 }
 
 
+/* ............................................................................................. */
 
+.popup__user-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.popup__wrapper-img {
+   
+    overflow: hidden;
+  
+    width: 300px;
+    height: 300px;
+
+    background-color: rgba(230, 255, 238, 1);
+    border: 15px solid #f2f2f2;
+    border-bottom: 40px solid #f2f2f2;
+    box-shadow: 0 0 4px #0007;
+    border-radius: 1px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3), 0 2px 10px rgba(255, 255, 255, 0.5); /* Більше тіней для створення об'єму */
+  
+    /* transform: rotate(2deg);  */
+
+    margin: 20px 0px;
+}
+.popup__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+@media (max-width: 660px) { 
+
+
+    .popup__wrapper-img {
+       
+        width: 250px;
+        height: 250px;
+        margin: 20px 20px;
+        border: 10px solid #f2f2f2;
+        border-bottom: 30px solid #f2f2f2;
+ 
+       
+
+    }
+
+}
