--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,8 @@ h1, h2, h3, h4, h5, h6 { font-size: inherit; font-weight: 400;}
 body {
     font-family: "Noto Sans", serif;
     overflow: auto;
-
+    line-height: 1.4;
+    /* letter-spacing: 1.5px; */
  
 
 }
@@ -125,11 +126,12 @@ body::-webkit-scrollbar-thumb {
         color:  rgb(85, 165, 111);
         font-weight: 700;
         font-size: 22px;
-        padding-left: 20px;
+        padding: 0px 30px;
+       
     }
 
     .popup__wraper{
-        margin-top: 6px;
+       
     width: 100%;
         height: 100%;
         overflow: auto;
@@ -1598,3 +1600,111 @@ footer{
     }
 
 }
+
+
+/* /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+.accordion {
+    width: 100%;
+ 
+    padding: 20px 0px;
+  }
+
+  .accordion__item {
+    border: 5px solid rgba(125, 220, 141, 0.3);
+    border-radius: 20px;
+    margin-bottom: 5px;
+    overflow: hidden;
+
+    color: rgba(85, 165, 111, 1);
+    font-size: 20px;
+  }
+
+  .accordion__header {
+    background-color: rgba(233, 254, 240, 0.8);
+    backdrop-filter: blur(4px);  
+    -webkit-backdrop-filter: blur(4px); 
+
+    padding: 10px;
+    font-weight: 800;
+    cursor: pointer;
+    transition: background 0.3s;
+
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .accordion__header:hover {
+    background-color: rgba(228, 254, 235, 0.8);
+  }
+
+  .accordion__content {
+    max-height: 0;
+    overflow: hidden;
+    padding: 0 10px;
+    transition: max-height 0.3s ease-in-out, padding 0.3s ease-in-out;
+    background-color: rgba(233, 254, 240, 0.8);
+
+   
+  }
+
+  .accordion__content a {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    border-bottom: 3px solid rgba(125, 220, 141, 0.3);
+    text-decoration: none;
+    color: rgba(85, 165, 111, 1);
+   
+  }
+  .accordion__content span {
+   
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+  }
+
+  .accordion__content .icon {
+   
+    margin-right: 8px;
+    width: 22px;
+    height: 22px;
+
+  }
+  .accordion__content a:first-child {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    border-top: 3px solid rgba(125, 220, 141, 0.3);
+    border-bottom: 3px solid rgba(125, 220, 141, 0.3);
+
+   
+  }
+
+  .accordion__item.active .accordion__content {
+    max-height: 500px;
+    padding: 10px;
+  }
+
+
+  @media (max-width: 660px) { 
+
+      .accordion__item {
+
+        font-size: 16px;
+      }
+      .accordion__content .icon {
+   
+        margin-right: 6px;
+        width: 20px;
+        height: 20px;
+    
+      }
+
+  }
+/* ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+
